tests/baselines/reference/duplicateNumericIndexers.errors.txt
lib.d.ts(431,5): error TS2375: Duplicate number index signature.
lib.d.ts(1158,5): error TS2375: Duplicate number index signature.
tests/cases/conformance/types/members/duplicateNumericIndexers.ts(5,5): error TS2375: Duplicate number index signature.
tests/cases/conformance/types/members/duplicateNumericIndexers.ts(10,5): error TS2375: Duplicate number index signature.
tests/cases/conformance/types/members/duplicateNumericIndexers.ts(15,5): error TS2375: Duplicate number index signature.
tests/cases/conformance/types/members/duplicateNumericIndexers.ts(20,5): error TS2375: Duplicate number index signature.
tests/cases/conformance/types/members/duplicateNumericIndexers.ts(25,5): error TS2375: Duplicate number index signature.
tests/cases/conformance/types/members/duplicateNumericIndexers.ts(30,5): error TS2375: Duplicate number index signature.


==== tests/cases/conformance/types/members/duplicateNumericIndexers.ts (6 errors) ====
    // it is an error to have duplicate index signatures of the same kind in a type
    
    interface Number {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    interface String {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    interface Array<T> {
        [x: number]: T;
        [x: number]: T;
        ~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    class C {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    interface I {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    var a: {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2375: Duplicate number index signature.
    }
    
    